--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,6 @@ dependencies {
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     testImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     implementation 'com.shizhefei:ViewPagerIndicator:1.1.6'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.android.support:cardview-v7:26.0.2'
 }
